--- a/Know Your Career App/stylesheet.css
+++ b/Know Your Career App/stylesheet.css
@@ -13,8 +13,6 @@ body {
     background: #ffffff;
 }
 
-
-
 .hidden{
    display:none;
 
@@ -27,27 +25,40 @@ body {
 
 
 #main-nav{
-   height:50px;
+   height:40px;
    font-family:Tahoma;
    color:black;
-   font-size:15px;
-   
+   font-size:15px; 
+   border-radius:5px;
+   border:1px solid black;
+   background-color:black;
+   padding-left:50px;
 
 
 }
+
 #main-nav a{
    text-decoration:none;
 
 }
 
 #header{  
-   height:150px;
+   height:200px;
+   margin-bottom:20px;
+}
 
+img{
+   width:800px;
+   height:190px;
+ 
 
 }
+
+
 #sidebar-a{
    float:right;
-   width:500px;
+   width:350px;
+   margin-bottom:20px;
   
    
 
@@ -55,25 +66,39 @@ body {
 }
 #content{
    float:right;
-   width:500px;
+   width:600px;
+   margin-bottom:20px;
   
 
 
 }
 
 #sign{
-    width:1000px;
+  padding-left:100px;
 
+}
 
+#career{
+  padding-left:100px;
+
+}
+
+#mentor{
+    padding-left:100px;
+   
 }
 #footer{
    clear:both;   
    font-family:Tahoma,Arial,Helvetica,Sans-serif;
    font-size:15px;
-   color:#c9c9c9;
-   border-top:1px solid #efefef;
-   padding:13px 25px;
-   line-height:18px;
+   color:darkgrey;
+   border-radius:5px;
+   border:1px solid black;
+   background-color:black;
+   margin:auto;
+   width:1000px;
+   height:40px;
+  
 
 
 }
@@ -92,6 +117,7 @@ body {
 #footer #altnav{
     float:right;
     text-align:right;
+   
 
 }
 
